Добавляет шапку и подвал

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Guitar Shop: Интернет-магазин гитар" />
   <title>Guitar Shop</title>
+  <link rel="preload" href="fonts/droid-sans-regular.woff2" as="font">
+  <link rel="preload" href="fonts/droid-sans-regular.woff" as="font">
 </head>
 
 <body>
